--- a/Minesweeper/Base.lproj/Main.storyboard
+++ b/Minesweeper/Base.lproj/Main.storyboard
@@ -19,11 +19,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3EP-2G-fIO">
-                                <rect key="frame" x="43" y="291.5" width="234" height="58"/>
+                                <rect key="frame" x="45" y="253" width="230" height="58"/>
                                 <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="234" id="MtL-ud-Xxy"/>
-                                    <constraint firstAttribute="height" constant="58" id="O42-mn-UPz"/>
+                                    <constraint firstAttribute="height" constant="58" id="tr6-I7-akf"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Beginner"/>
@@ -37,11 +36,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HtK-OO-ucH">
-                                <rect key="frame" x="43" y="376.5" width="234" height="58"/>
+                                <rect key="frame" x="45" y="327" width="230" height="58"/>
                                 <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="58" id="UtH-qS-EqK"/>
-                                    <constraint firstAttribute="width" constant="234" id="gAe-Q0-jaZ"/>
+                                    <constraint firstAttribute="height" constant="58" id="MAQ-aV-fgf"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Intermediate"/>
@@ -55,11 +53,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mgT-bQ-tgo">
-                                <rect key="frame" x="43" y="461.5" width="234" height="58"/>
+                                <rect key="frame" x="45" y="401" width="230" height="58"/>
                                 <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="234" id="fju-PZ-wd4"/>
-                                    <constraint firstAttribute="height" constant="58" id="tCY-yz-La4"/>
+                                    <constraint firstAttribute="height" constant="58" id="Cnx-Od-LFQ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Advanced"/>
@@ -72,40 +69,78 @@
                                     <action selector="gameDifficultyChosen:" destination="u3e-n8-ewN" eventType="touchUpInside" id="oeL-t7-8dr"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Minesweeper!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PXu-U3-u7Z">
-                                <rect key="frame" x="6.5" y="193" width="307.5" height="32.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Minesweeper!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PXu-U3-u7Z">
+                                <rect key="frame" x="10" y="170" width="300" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <color key="textColor" red="0.092556603187550435" green="0.19203083039100161" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a difficulty:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gzg-iq-H0I">
-                                <rect key="frame" x="91.5" y="240.5" width="137" height="21"/>
+                                <rect key="frame" x="91.5" y="216" width="137" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.092556603190000003" green="0.19203083039999999" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine-icon-black-50" translatesAutoresizingMaskIntoConstraints="NO" id="WcF-cI-cqK">
-                                <rect key="frame" x="40" y="45" width="240" height="128"/>
+                                <rect key="frame" x="70" y="45" width="180" height="100"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="Wq1-vo-TXn"/>
-                                    <constraint firstAttribute="width" constant="240" id="fnD-z8-M01"/>
+                                    <constraint firstAttribute="height" constant="100" id="Wq1-vo-TXn"/>
+                                    <constraint firstAttribute="width" constant="180" id="fnD-z8-M01"/>
                                 </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mB7-wW-KE4">
+                                <rect key="frame" x="0.0" y="508" width="320" height="60"/>
+                                <subviews>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l7k-ts-zQa" userLabel="High Scores Button">
+                                        <rect key="frame" x="60" y="10" width="200" height="40"/>
+                                        <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="JaQ-bK-qCO"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="View High Scores"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <integer key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="gameDifficultyChosen:" destination="u3e-n8-ewN" eventType="touchUpInside" id="Dgc-ie-wkZ"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.5608087182" green="0.56124979259999996" blue="0.56087702510000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="l7k-ts-zQa" firstAttribute="leading" secondItem="mB7-wW-KE4" secondAttribute="leading" constant="60" id="Ly4-lQ-Gp2"/>
+                                    <constraint firstItem="l7k-ts-zQa" firstAttribute="centerX" secondItem="mB7-wW-KE4" secondAttribute="centerX" id="Rmi-EZ-FEG"/>
+                                    <constraint firstAttribute="height" constant="60" id="SeQ-Qv-Ofb"/>
+                                    <constraint firstItem="l7k-ts-zQa" firstAttribute="centerY" secondItem="mB7-wW-KE4" secondAttribute="centerY" id="e7h-5P-qeq"/>
+                                    <constraint firstAttribute="trailing" secondItem="l7k-ts-zQa" secondAttribute="trailing" constant="60" id="s1x-0A-Qal"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.73483115434646606" green="0.72815835475921631" blue="0.7349126935005188" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Gzg-iq-H0I" firstAttribute="top" secondItem="PXu-U3-u7Z" secondAttribute="bottom" constant="15" id="80o-Uu-zjd"/>
-                            <constraint firstItem="WcF-cI-cqK" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="8rb-zr-Aps"/>
-                            <constraint firstItem="mgT-bQ-tgo" firstAttribute="top" secondItem="HtK-OO-ucH" secondAttribute="bottom" constant="27" id="M0t-Y9-847"/>
-                            <constraint firstItem="mgT-bQ-tgo" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="OV2-CI-5id"/>
-                            <constraint firstItem="WcF-cI-cqK" firstAttribute="top" secondItem="5pg-dB-oM5" secondAttribute="top" constant="25" id="TNP-IQ-Gn5"/>
-                            <constraint firstItem="HtK-OO-ucH" firstAttribute="top" secondItem="3EP-2G-fIO" secondAttribute="bottom" constant="27" id="Wth-P5-G1q"/>
-                            <constraint firstItem="3EP-2G-fIO" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="akk-ai-ivW"/>
-                            <constraint firstItem="3EP-2G-fIO" firstAttribute="top" secondItem="Gzg-iq-H0I" secondAttribute="bottom" constant="30" id="euT-WD-pbi"/>
-                            <constraint firstItem="HtK-OO-ucH" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="fAa-Qi-gcc"/>
-                            <constraint firstItem="Gzg-iq-H0I" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="fcg-QH-9gH"/>
-                            <constraint firstItem="PXu-U3-u7Z" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="goV-UF-3DO"/>
-                            <constraint firstItem="PXu-U3-u7Z" firstAttribute="top" secondItem="WcF-cI-cqK" secondAttribute="bottom" constant="20" id="yL1-W5-TBC"/>
+                            <constraint firstItem="Gzg-iq-H0I" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="1EM-3J-vnJ"/>
+                            <constraint firstItem="5pg-dB-oM5" firstAttribute="trailing" secondItem="HtK-OO-ucH" secondAttribute="trailing" constant="45" id="1nk-J0-xtc"/>
+                            <constraint firstItem="mB7-wW-KE4" firstAttribute="leading" secondItem="5pg-dB-oM5" secondAttribute="leading" id="3Al-hO-TSf"/>
+                            <constraint firstItem="HtK-OO-ucH" firstAttribute="leading" secondItem="5pg-dB-oM5" secondAttribute="leading" constant="45" id="6ox-GO-Yjv"/>
+                            <constraint firstItem="3EP-2G-fIO" firstAttribute="leading" secondItem="5pg-dB-oM5" secondAttribute="leading" constant="45" id="A8V-uk-su6"/>
+                            <constraint firstItem="3EP-2G-fIO" firstAttribute="top" secondItem="Gzg-iq-H0I" secondAttribute="bottom" constant="16" id="BNg-HG-u2U"/>
+                            <constraint firstItem="PXu-U3-u7Z" firstAttribute="top" secondItem="WcF-cI-cqK" secondAttribute="bottom" constant="25" id="Bjj-LR-bUW"/>
+                            <constraint firstItem="PXu-U3-u7Z" firstAttribute="leading" secondItem="5pg-dB-oM5" secondAttribute="leading" constant="10" id="FUB-Bf-S7r"/>
+                            <constraint firstItem="WcF-cI-cqK" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="Fpj-bg-ygd"/>
+                            <constraint firstItem="mgT-bQ-tgo" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="Hds-vQ-xUj"/>
+                            <constraint firstItem="Gzg-iq-H0I" firstAttribute="top" secondItem="PXu-U3-u7Z" secondAttribute="bottom" constant="16" id="JIT-iW-4pF"/>
+                            <constraint firstItem="5pg-dB-oM5" firstAttribute="trailing" secondItem="mgT-bQ-tgo" secondAttribute="trailing" constant="45" id="Jk0-FU-2XC"/>
+                            <constraint firstAttribute="bottom" secondItem="mB7-wW-KE4" secondAttribute="bottom" id="SPJ-1X-rvM"/>
+                            <constraint firstItem="5pg-dB-oM5" firstAttribute="trailing" secondItem="mB7-wW-KE4" secondAttribute="trailing" id="VmS-vM-xJc"/>
+                            <constraint firstItem="mgT-bQ-tgo" firstAttribute="top" secondItem="HtK-OO-ucH" secondAttribute="bottom" constant="16" id="abr-jT-3TR"/>
+                            <constraint firstItem="5pg-dB-oM5" firstAttribute="trailing" secondItem="PXu-U3-u7Z" secondAttribute="trailing" constant="10" id="c5y-rb-Rbz"/>
+                            <constraint firstItem="5pg-dB-oM5" firstAttribute="trailing" secondItem="3EP-2G-fIO" secondAttribute="trailing" constant="45" id="lBf-I4-95L"/>
+                            <constraint firstItem="WcF-cI-cqK" firstAttribute="top" secondItem="5pg-dB-oM5" secondAttribute="top" constant="25" id="maW-RW-Hcu"/>
+                            <constraint firstItem="HtK-OO-ucH" firstAttribute="top" secondItem="3EP-2G-fIO" secondAttribute="bottom" constant="16" id="q5h-ky-tiF"/>
+                            <constraint firstItem="mgT-bQ-tgo" firstAttribute="leading" secondItem="5pg-dB-oM5" secondAttribute="leading" constant="45" id="z6V-1S-mrC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5pg-dB-oM5"/>
                     </view>
@@ -118,7 +153,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3IX-8r-PbN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-818.39999999999998" y="135.38230884557723"/>
+            <point key="canvasLocation" x="-819.375" y="135.21126760563379"/>
         </scene>
         <!--Game Screen View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -296,6 +331,21 @@
                 <exit id="p8l-wO-SZg" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="133.125" y="133.09859154929578"/>
+        </scene>
+        <!--High Scores View Controller-->
+        <scene sceneID="yqP-gv-cxv">
+            <objects>
+                <viewController id="H2L-aF-44V" userLabel="High Scores View Controller" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BrY-Mv-jOm">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="AcU-H8-q71"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ldZ-cS-nnT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-327" y="830"/>
         </scene>
     </scenes>
     <resources>
