--- a/Minesweeper/Base.lproj/Main.storyboard
+++ b/Minesweeper/Base.lproj/Main.storyboard
@@ -343,20 +343,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="mine-icon-black-50" translatesAutoresizingMaskIntoConstraints="NO" id="BwQ-XB-xQY">
-                                <rect key="frame" x="23" y="46" width="91" height="51"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="180" id="oJz-nF-YGf"/>
-                                    <constraint firstAttribute="height" constant="100" id="zeG-14-4VM"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Best Times" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mfG-Bw-JBT">
-                                <rect key="frame" x="122" y="46" width="161" height="51"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <color key="textColor" red="0.092556603190000003" green="0.19203083039999999" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qQE-1q-aX2" userLabel="Menu Button">
                                 <rect key="frame" x="50" y="502.5" width="220" height="45.5"/>
                                 <color key="backgroundColor" red="0.73333333329999995" green="0.72941176470000002" blue="0.73333333329999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -376,13 +362,129 @@
                                     <action selector="menuButtonPressed:" destination="H2L-aF-44V" eventType="touchUpInside" id="yIl-1X-EKu"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bH3-2z-75n" userLabel="Table View Header">
+                                <rect key="frame" x="0.0" y="145" width="320" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Position" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j6G-d1-RvX">
+                                        <rect key="frame" x="0.0" y="0.0" width="106.5" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" red="0.092556603190000003" green="0.19203083039999999" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EOl-kg-jln" userLabel="Divider 1">
+                                        <rect key="frame" x="106.5" y="0.0" width="1" height="30"/>
+                                        <color key="backgroundColor" red="0.40351331229999998" green="0.40381026269999998" blue="0.41168540720000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="1" id="pRl-C3-gNO"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2QX-7Y-trc" userLabel="Name">
+                                        <rect key="frame" x="107.5" y="6" width="106.5" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" red="0.092556603190000003" green="0.19203083039999999" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lrj-GN-tQd" userLabel="Divider 2">
+                                        <rect key="frame" x="214" y="0.0" width="1" height="30"/>
+                                        <color key="backgroundColor" red="0.40351331229999998" green="0.40381026269999998" blue="0.41168540720000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="1" id="JDE-MI-PoK"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1pe-1b-xYb" userLabel="Time">
+                                        <rect key="frame" x="215" y="6" width="106.5" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" red="0.092556603190000003" green="0.19203083039999999" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="1pe-1b-xYb" firstAttribute="width" secondItem="bH3-2z-75n" secondAttribute="width" multiplier="0.333" id="0lz-SC-aid"/>
+                                    <constraint firstItem="lrj-GN-tQd" firstAttribute="leading" secondItem="2QX-7Y-trc" secondAttribute="trailing" id="3gp-1J-0pv"/>
+                                    <constraint firstAttribute="bottom" secondItem="lrj-GN-tQd" secondAttribute="bottom" id="7i7-qD-29x"/>
+                                    <constraint firstItem="2QX-7Y-trc" firstAttribute="width" secondItem="bH3-2z-75n" secondAttribute="width" multiplier="0.333" id="8ww-hX-GZk"/>
+                                    <constraint firstItem="2QX-7Y-trc" firstAttribute="centerY" secondItem="bH3-2z-75n" secondAttribute="centerY" id="CsX-yV-gqd"/>
+                                    <constraint firstItem="j6G-d1-RvX" firstAttribute="width" secondItem="bH3-2z-75n" secondAttribute="width" multiplier="0.333" id="D10-JW-XAi"/>
+                                    <constraint firstAttribute="height" constant="30" id="GMQ-FU-rl1"/>
+                                    <constraint firstItem="lrj-GN-tQd" firstAttribute="trailing" secondItem="1pe-1b-xYb" secondAttribute="leading" id="HFb-Kj-40L"/>
+                                    <constraint firstItem="j6G-d1-RvX" firstAttribute="leading" secondItem="bH3-2z-75n" secondAttribute="leading" id="JTy-Hy-DMN"/>
+                                    <constraint firstItem="2QX-7Y-trc" firstAttribute="leading" secondItem="EOl-kg-jln" secondAttribute="trailing" id="L1c-k5-w8T"/>
+                                    <constraint firstItem="j6G-d1-RvX" firstAttribute="centerY" secondItem="bH3-2z-75n" secondAttribute="centerY" id="MTM-0R-auO"/>
+                                    <constraint firstItem="lrj-GN-tQd" firstAttribute="top" secondItem="bH3-2z-75n" secondAttribute="top" id="UDJ-OB-4WM"/>
+                                    <constraint firstAttribute="bottom" secondItem="EOl-kg-jln" secondAttribute="bottom" id="VUy-Zs-MYG"/>
+                                    <constraint firstItem="j6G-d1-RvX" firstAttribute="height" secondItem="bH3-2z-75n" secondAttribute="height" id="f0s-Uu-idU"/>
+                                    <constraint firstItem="EOl-kg-jln" firstAttribute="leading" secondItem="j6G-d1-RvX" secondAttribute="trailing" id="oN3-MX-2yT"/>
+                                    <constraint firstItem="EOl-kg-jln" firstAttribute="top" secondItem="bH3-2z-75n" secondAttribute="top" id="s3K-Rn-umW"/>
+                                    <constraint firstItem="1pe-1b-xYb" firstAttribute="centerY" secondItem="bH3-2z-75n" secondAttribute="centerY" id="wMN-fw-6NX"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oY3-kw-vGt" userLabel="Header View">
+                                <rect key="frame" x="0.0" y="20" width="320" height="85"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine-icon-black-50" translatesAutoresizingMaskIntoConstraints="NO" id="hwf-Ox-kk0">
+                                        <rect key="frame" x="235" y="15" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="09C-W0-1SE"/>
+                                            <constraint firstAttribute="height" constant="50" id="d5C-Qp-JsP"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Best Times" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mfG-Bw-JBT">
+                                        <rect key="frame" x="100.5" y="27.5" width="119.5" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <color key="textColor" red="0.092556603190000003" green="0.19203083039999999" blue="0.92928432679999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mine-icon-black-50" translatesAutoresizingMaskIntoConstraints="NO" id="BwQ-XB-xQY">
+                                        <rect key="frame" x="35.5" y="15" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="oJz-nF-YGf"/>
+                                            <constraint firstAttribute="height" constant="50" id="zeG-14-4VM"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.65000000000000002" green="0.65000000000000002" blue="0.65000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="hwf-Ox-kk0" firstAttribute="top" secondItem="oY3-kw-vGt" secondAttribute="top" constant="15" id="Nr4-wq-csm"/>
+                                    <constraint firstItem="BwQ-XB-xQY" firstAttribute="top" secondItem="oY3-kw-vGt" secondAttribute="top" constant="15" id="QEQ-7K-Rfp"/>
+                                    <constraint firstItem="mfG-Bw-JBT" firstAttribute="leading" secondItem="BwQ-XB-xQY" secondAttribute="trailing" constant="15" id="Uw1-vh-2HS"/>
+                                    <constraint firstItem="hwf-Ox-kk0" firstAttribute="leading" secondItem="mfG-Bw-JBT" secondAttribute="trailing" constant="15" id="Z2w-8Q-K0D"/>
+                                    <constraint firstItem="mfG-Bw-JBT" firstAttribute="centerY" secondItem="oY3-kw-vGt" secondAttribute="centerY" id="hc8-Mt-T71"/>
+                                    <constraint firstItem="mfG-Bw-JBT" firstAttribute="centerX" secondItem="oY3-kw-vGt" secondAttribute="centerX" id="lFh-V5-Ugt"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nBh-3s-7mR">
+                                <rect key="frame" x="0.0" y="175" width="320" height="307.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="xe3-zC-oTM">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xe3-zC-oTM" id="CSy-nb-5Hi">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.86299999999999999" green="0.86299999999999999" blue="0.86299999999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="AcU-H8-q71" firstAttribute="trailing" secondItem="qQE-1q-aX2" secondAttribute="trailing" constant="50" id="1d0-W6-QdP"/>
+                            <constraint firstItem="qQE-1q-aX2" firstAttribute="top" secondItem="nBh-3s-7mR" secondAttribute="bottom" constant="20" id="71d-Nz-JDJ"/>
+                            <constraint firstItem="AcU-H8-q71" firstAttribute="trailing" secondItem="oY3-kw-vGt" secondAttribute="trailing" id="Jnb-dk-JAu"/>
+                            <constraint firstItem="oY3-kw-vGt" firstAttribute="height" secondItem="BrY-Mv-jOm" secondAttribute="height" multiplier="0.15" id="N5G-pL-aD9"/>
+                            <constraint firstItem="oY3-kw-vGt" firstAttribute="top" secondItem="AcU-H8-q71" secondAttribute="top" id="NHm-MZ-PNm"/>
                             <constraint firstItem="AcU-H8-q71" firstAttribute="bottom" secondItem="qQE-1q-aX2" secondAttribute="bottom" constant="20" id="SKR-Wg-JSB"/>
+                            <constraint firstAttribute="trailing" secondItem="nBh-3s-7mR" secondAttribute="trailing" id="Swo-aR-BdM"/>
+                            <constraint firstItem="bH3-2z-75n" firstAttribute="leading" secondItem="AcU-H8-q71" secondAttribute="leading" id="Xm4-hL-Xck"/>
+                            <constraint firstItem="bH3-2z-75n" firstAttribute="top" secondItem="oY3-kw-vGt" secondAttribute="bottom" constant="40" id="a3z-Q4-WzF"/>
                             <constraint firstItem="qQE-1q-aX2" firstAttribute="leading" secondItem="AcU-H8-q71" secondAttribute="leading" constant="50" id="byn-U4-pcO"/>
+                            <constraint firstItem="AcU-H8-q71" firstAttribute="trailing" secondItem="bH3-2z-75n" secondAttribute="trailing" id="nbr-x8-Yip"/>
                             <constraint firstItem="qQE-1q-aX2" firstAttribute="height" secondItem="BrY-Mv-jOm" secondAttribute="height" multiplier="0.08" id="oEB-4h-vT6"/>
+                            <constraint firstItem="nBh-3s-7mR" firstAttribute="leading" secondItem="AcU-H8-q71" secondAttribute="leading" id="rMb-xC-bwa"/>
+                            <constraint firstItem="nBh-3s-7mR" firstAttribute="top" secondItem="bH3-2z-75n" secondAttribute="bottom" id="rqS-Xf-0yV"/>
+                            <constraint firstItem="oY3-kw-vGt" firstAttribute="leading" secondItem="AcU-H8-q71" secondAttribute="leading" id="sVZ-Wc-dkn"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="AcU-H8-q71"/>
                     </view>
